# claude-manager

./: .gitignore  Claude Code セッション管理調査.md  README.md  pyproject.toml  spec.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  helpers.test.ts  helpers.ts  index.css  types.ts
frontend/src/components/: AssetsPanel.tsx  Dashboard.tsx  DashboardColumn.tsx  GroupBar.tsx  MessageArea.tsx  ProjectOverview.tsx  SearchModal.tsx  Sidebar.tsx  SplitPaneView.tsx  SplitView.tsx
frontend/src/hooks/: useDashboard.ts  useGroups.ts  useResizable.ts  useSSE.ts  useSplitView.ts
src/claude_manager/: config.py  main.py  models.py
src/claude_manager/routers/: events.py  groups.py  search.py  sessions.py
src/claude_manager/services/: asset_reader.py  group_detector.py  index_reader.py  message_parser.py  search.py  session_interactor.py  session_manager.py  terminal.py  user_data.py  watcher.py
src/claude_manager/static/: app.js  index.html  style.css
tests/: conftest.py  factories.py  test_models.py
tests/routers/: conftest.py  test_groups.py  test_sessions.py
tests/services/: test_asset_reader.py  test_group_detector.py  test_index_reader.py  test_message_parser.py  test_search.py  test_session_manager.py  test_user_data.py
tests/testdata/: sample_index.json  sample_session.jsonl
