[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-manager"
version = "0.1.0"
description = "Claude Code session manager with Slack-like UI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
claude-manager = "claude_manager.main:cli"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
